--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "vim/vim/pathogen"]
 	path = vim/vim/pathogen
 	url = http://github.com/paulnicholson/vim-pathogen.git
+[submodule "vim/vim/bundle/surround"]
+	path = vim/vim/bundle/surround
+	url = http://github.com/tpope/vim-surround.git
