--- a/.gitmodules
+++ b/.gitmodules
@@ -19,3 +19,6 @@
 [submodule "vim/vim/bundle/snipmate"]
 	path = vim/vim/bundle/snipmate
 	url = https://github.com/msanders/snipmate.vim.git
+[submodule "vim/vim/bundle/ragtag"]
+	path = vim/vim/bundle/ragtag
+	url = https://github.com/tpope/vim-ragtag.git
