--- a/.gitmodules
+++ b/.gitmodules
@@ -22,3 +22,6 @@
 [submodule "vim/vim/bundle/ragtag"]
 	path = vim/vim/bundle/ragtag
 	url = https://github.com/tpope/vim-ragtag.git
+[submodule "vim/vim/bundle/taglist"]
+	path = vim/vim/bundle/taglist
+	url = https://github.com/vim-scripts/taglist.vim.git
