--- a/.gitmodules
+++ b/.gitmodules
@@ -25,3 +25,6 @@
 [submodule "vim/vim/bundle/taglist"]
 	path = vim/vim/bundle/taglist
 	url = https://github.com/vim-scripts/taglist.vim.git
+[submodule "vim/vim/bundle/cocoa"]
+	path = vim/vim/bundle/cocoa
+	url = https://github.com/vim-scripts/cocoa.vim.git
