Switched right and left in tmux

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -10,9 +10,10 @@ set -g base-index 1
 
 set-window-option -g window-status-current-fg magenta
 
-set -g status-left-length 20
-set -g status-left  '#[fg=#003300][#[fg=#444444]#h#[fg=#003300]:#[fg=#444444]#S#[fg=#003300]]['
-set -g status-right '#[fg=#003300]][#[fg=#666666]#T#[fg=#003300]]'
+set -g status-left-length 50
+set -g status-right-length 20
+set -g status-left  '#[fg=#003300][#[fg=#666666]#T#[fg=#003300]]['
+set -g status-right '#[fg=#003300]][#[fg=#444444]#h#[fg=#003300]:#[fg=#444444]#S#[fg=#003300]]'
 
 set-option -g set-titles on
 set-option -g set-titles-string "[#h:#S] #T"
