--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -22,3 +22,7 @@ set-window-option -g automatic-rename on
 
 bind-key R source-file ~/.tmux.conf \; \
 	display-message "Configuration refreshed"
+
+set-window-option -g mode-keys vi
+bind-key -t vi-copy 'v' begin-selection
+bind-key -t vi-copy 'y' copy-selection
