--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,9 @@
 [submodule "vim"]
 	path = vim
 	url = git@github.com:asheidan/Vimfiles.git
+[submodule "zsh/zsh/zsh-history-substring-search"]
+	path = zsh/zsh/zsh-history-substring-search
+	url = https://github.com/zsh-users/zsh-history-substring-search.git
+[submodule "zsh/zsh/zsh-syntax-highlighting"]
+	path = zsh/zsh/zsh-syntax-highlighting
+	url = https://github.com/zsh-users/zsh-syntax-highlighting.git
