--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -2,7 +2,7 @@ set -g default-terminal "screen-256color"
 
 set -g detach-on-destroy on
 # More fun statusbar
-set -g status-bg "#111111"
+set -g status-bg "black"
 set -g status-fg "#444444"
 
 # Begin window numbering on 1
@@ -12,11 +12,26 @@ set-window-option -g window-status-current-fg magenta
 
 set -g status-left-length 50
 set -g status-right-length 20
-set -g status-left  '#[fg=#003300][#[fg=#666666]#T#[fg=#003300]]['
-set -g status-right '#[fg=#003300]][#[fg=#444444]#h#[fg=#003300]:#[fg=#444444]#S#[fg=#003300]]'
+set -g status-left  '#[fg=default][#[fg=magenta]#T#[fg=default]]['
+set -g status-right '#[fg=default]][#[fg=magenta]#h#[fg=default]:#[fg=magenta]#S#[fg=default]]'
+#set -g window-status-format
+set-window-option -g window-status-current-fg "magenta"
+set-window-option -g window-status-current-bg "default"
+set -g window-status-current-format "#I:#[fg=magenta,bold]#W"
+
+# Window list
+set -g window-status-content-attr "none"
+set -g window-status-activity-attr "none"
+set -g window-status-bell-attr "none"
+set -g window-status-content-fg "blue"
+set -g window-status-activity-fg "red"
+set -g window-status-bell-fg "green"
+set -g window-status-content-bg "default"
+set -g window-status-activity-bg "default"
+set -g window-status-bell-bg "default"
 
 set-option -g set-titles on
-set-option -g set-titles-string "[#h:#S] #T"
+set-option -g set-titles-string "[###S] #T"
 # Automatically set window title
 set-window-option -g automatic-rename on
 
@@ -26,3 +41,13 @@ bind-key R source-file ~/.tmux.conf \; \
 set-window-option -g mode-keys vi
 bind-key -t vi-copy 'v' begin-selection
 bind-key -t vi-copy 'y' copy-selection
+
+bind-key T neww -n "Tmux manual" "exec man tmux"
+
+# tobble last window
+bind-key C-b last-window
+
+# Django
+#bind-key J source-file ~/Documents/dotfiles/tmux/django.conf \; \
+#	display-message "Django configuration loaded"
+bind-key j neww "django-launch-menu"
