Updates to Tmux bindings

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -48,6 +48,10 @@ bind-key T neww -n "Tmux manual" "exec man tmux"
 # tobble last window
 bind-key C-b last-window
 
+# pane movement
+bind-key j command-prompt -p "Join pane from:"  "join-pane -s '%%'"
+bind-key s command-prompt -p "Send pane to:"  "join-pane -t '%%'"
+
 # Django
 #bind-key J source-file ~/Documents/dotfiles/tmux/django.conf \; \
 #	display-message "Django configuration loaded"
