--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -3,7 +3,7 @@ set -g default-command "zsh"
 
 set -g detach-on-destroy on
 # More fun statusbar
-set -g status-bg "black"
+set -g status-bg "default"
 set -g status-fg "#444444"
 
 # Begin window numbering on 1
