Change remote for emacs

--- a/.gitmodules
+++ b/.gitmodules
@@ -9,4 +9,4 @@
 	url = https://github.com/zsh-users/zsh-syntax-highlighting.git
 [submodule "emacs"]
 	path = emacs
-	url = ssh://git@github.com:asheidan/Emacsfiles.git
+	url = git@github.com:asheidan/Emacsfiles.git
