Update the settings for tmux

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -8,12 +8,14 @@ set -g status-fg "#444444"
 
 # Begin window numbering on 1
 set -g base-index 1
+# Automatically reorder windows
+set -g renumber-windows on
 
 set-window-option -g window-status-current-fg magenta
 
 set -g status-left-length 50
 set -g status-right-length 20
-set -g status-left  '#[fg=default][#[fg=magenta]#T#[fg=default]]['
+set -g status-left  '#[fg=default]['
 set -g status-right '#[fg=default]][#[fg=magenta]#h#[fg=default]:#[fg=magenta]#S#[fg=default]]'
 #set -g window-status-format
 set-window-option -g window-status-current-fg "magenta"
@@ -47,6 +49,11 @@ bind-key T neww -n "Tmux manual" "exec man tmux"
 
 # tobble last window
 bind-key C-b last-window
+
+# Quicker window switching
+bind-key C-c new-window
+bind-key C-n next-window
+bind-key C-p previous-window
 
 # pane movement
 bind-key j command-prompt -p "Join pane from:"  "join-pane -s '%%'"
