Update tmux to work with newer versions of tmux
This also updates the look a bit.
Probably looks best with bright background.

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,65 +1,57 @@
-set -g default-terminal "screen-256color"
-set -g default-command "zsh"
+# https://github.com/asheidan/dotfiles/blob/master/tmux/tmux.conf#LL41C1-L42C43
 
-set -g detach-on-destroy on
-# More fun statusbar
-set -g status-bg "default"
-set -g status-fg "#444444"
-
-# Begin window numbering on 1
 set -g base-index 1
-# Automatically reorder windows
 set -g renumber-windows on
 
-set-window-option -g window-status-current-fg magenta
+set -g mouse on
 
-set -g status-left-length 50
-set -g status-right-length 20
-set -g status-left  '#[fg=default]['
-set -g status-right '#[fg=default]][#[fg=magenta]#h#[fg=default]:#[fg=magenta]#S#[fg=default]]'
-#set -g window-status-format
-set-window-option -g window-status-current-fg "magenta"
-set-window-option -g window-status-current-bg "default"
-set -g window-status-current-format "#I:#[fg=magenta,bold]#W"
+set -g mode-keys vi
+bind-key -Tcopy-mode-vi v send-keys -X begin-selection
+bind-key -Tcopy-mode-vi y send-keys -X copy-selection
 
-# Window list
-set -g window-status-content-attr "none"
-set -g window-status-activity-attr "none"
-set -g window-status-bell-attr "none"
-set -g window-status-content-fg "blue"
-set -g window-status-activity-fg "red"
-set -g window-status-bell-fg "green"
-set -g window-status-content-bg "default"
-set -g window-status-activity-bg "default"
-set -g window-status-bell-bg "default"
-
-set-option -g set-titles on
-set-option -g set-titles-string "[###S] #T"
-# Automatically set window title
-set-window-option -g automatic-rename on
-
-bind-key R source-file ~/.tmux.conf \; \
+bind-key R source-file ~/.config/tmux/tmux.conf \; \
 	display-message "Configuration refreshed"
 
-set-window-option -g mode-keys vi
-bind-key -t vi-copy 'v' begin-selection
-bind-key -t vi-copy 'y' copy-selection
-
-bind-key T neww -n "Tmux manual" "exec man tmux"
-
-# tobble last window
-bind-key C-b last-window
-
-# Quicker window switching
+# Easier window switching
 bind-key C-c new-window
 bind-key C-n next-window
 bind-key C-p previous-window
 
-# pane movement
-bind-key j command-prompt -p "Join pane from:"  "join-pane -s '%%'"
-bind-key s command-prompt -p "Send pane to:"  "join-pane -t '%%'"
+#set -g status-style 'bg=white,fg=black'
+set -g status-style 'bg=color231,fg=black'
 
-# Django
-#bind-key J source-file ~/Documents/dotfiles/tmux/django.conf \; \
-#	display-message "Django configuration loaded"
-bind-key j neww "django-launch-menu"
+set -g status-left '#[bg=default,fg=default]'
+set -g status-left-length 50
+
+set -g status-left ''
+set -g status-right '#h:#S #{tmux_mode_indicator}'
+
+set -g message-style 'bg=color227,fg=color234'
+set -g message-command-style 'bg=color154,fg=color234'
+
+#set -g window-status-style ''
+set -g window-status-format ' #I #W#F '
+
+#set -g window-status-current-style 'fg=white,bg=blue,bright'
+set -g window-status-current-format ' #I #[fg=color253]#W '
+set -g window-status-current-style 'fg=color231,bg=color24'
+
+set -g window-status-last-style 'fg=default,bg=color153'
+
+set -g window-status-activity-style 'fg=default,bg=color208'
+set -g window-status-bell-style 'fg=default,bg=color196'
+#set -g window-status-last-format ' #I  #W#F '
+
+set -g copy-mode-match-style 'bg=color214,fg=color16'
+set -g copy-mode-current-match-style 'bg=color226,fg=color16'
+
+set -g mode-style 'bg=color214,fg=color16'
+
+run-shell "$HOME/.config/tmux/plugins/tmux-fzf/main.tmux"
+
+set -g @mode_indicator_empty_mode_style 'bg=cyan,fg=color231'
+set -g @mode_indicator_prefix_mode_style 'bg=blue,fg=color231'
+set -g @mode_indicator_copy_mode_style 'bg=color214,fg=color16'
+set -g @mode_indicator_sync_mode_style 'bg=color160,fg=color231'
+run-shell "$HOME/.config/tmux/plugins/tmux-mode-indicator/mode_indicator.tmux"
+
