--- a/.gitmodules
+++ b/.gitmodules
@@ -13,3 +13,9 @@
 [submodule "zsh/zsh/zsh-autosuggestions"]
 	path = zsh/zsh/zsh-autosuggestions
 	url = git@github.com:zsh-users/zsh-autosuggestions.git
+[submodule "tmux/plugins/tmux-fzf"]
+	path = tmux/plugins/tmux-fzf
+	url = https://github.com/sainnhe/tmux-fzf.git
+[submodule "tmux/plugins/tmux-mode-indicator"]
+	path = tmux/plugins/tmux-mode-indicator
+	url = https://github.com/MunifTanjim/tmux-mode-indicator.git
