--- a/alacritty/alacritty.yml
+++ b/alacritty/alacritty.yml
@@ -52,8 +52,8 @@ window:
   # Blank space added around the window in pixels. This padding is scaled
   # by DPI and the specified value is always added at both opposing sides.
   padding:
-    x: 2
-    y: 2
+    x: 4
+    y: 4
 
   # Spread additional padding evenly around the terminal content.
   #dynamic_padding: false
@@ -139,8 +139,10 @@ font:
     #   - (Windows) Consolas
     #family: monospace
 
-    family: ProFontIIx
-    style: Regular
+    #family: ProFontIIx
+    #style: Regular
+    family: ProFontIIx Nerd Font
+    style: Book
 
     #family: Fira Code
     #style: Retina
@@ -159,8 +161,10 @@ font:
     #style: Retina
     #style: SemiBold
 
-    family: ProFontIIx
-    style: Regular
+    #family: ProFontIIx
+    #style: Regular
+    family: ProFontIIx Nerd Font
+    style: Book
 
     # The `style` can be specified to pick a specific face.
     #style: Bold
